// Code generated by tableau (protogen v0.9.0). DO NOT EDIT.
// clang-format off

syntax = "proto3";

package protoconf;

import "tableau/protobuf/tableau.proto";

option go_package = "github.com/tableauio/tableau/test/functest/protoconf";
option (tableau.workbook) = {name:"excel/fieldprop/Common#*.csv" namerow:1 typerow:2 noterow:3 datarow:4 sep:"," subsep:":"};

message EquipConf {
  option (tableau.worksheet) = {name:"EquipConf"};

  map<uint32, Item> item_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL}];
  message Item {
    uint32 id = 1 [(tableau.field) = {name:"ID" prop:{unique:true}}]; // Equip ID
    int32 damage = 2 [(tableau.field) = {name:"Damage"}]; // Equip damage
  }
}

message ItemConf {
  option (tableau.worksheet) = {name:"ItemConf"};

  map<uint32, Item> item_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL}];
  message Item {
    uint32 id = 1 [(tableau.field) = {name:"ID" prop:{sequence:1}}]; // Item ID
    int32 num = 2 [(tableau.field) = {name:"Num"}]; // Item num
  }
}
