// Code generated by tableau (protogen v0.5.0). DO NOT EDIT.
// clang-format off

syntax = "proto3";

package protoconf;

import "tableau/protobuf/tableau.proto";

option go_package = "github.com/tableauio/tableau/test/functest/protoconf";
option (tableau.workbook) = {name:"excel/metasheet/SheetMode#*.csv"};

// Generated from sheet: ItemType.
enum ItemType {
  ITEM_TYPE_UNKNOWN = 0 [(tableau.evalue).name = "Unknown"];
  ITEM_TYPE_FRUIT = 1 [(tableau.evalue).name = "Fruit"];
  ITEM_TYPE_EQUIP = 2 [(tableau.evalue).name = "Equip"];
  ITEM_TYPE_BOX = 3 [(tableau.evalue).name = "Box"];
}

// Generated from sheet: UnionTaskTarget.
message TaskTarget {
  option (tableau.union) = true;

  Type type = 9999 [(tableau.field) = { name: "Type" }];
  oneof value {
    option (tableau.oneof) = {field: "Field"};

    PvpBattle pvp_battle = 1; // Bound to enum value: TYPE_PVP_BATTLE.
    PveBattle pve_battle = 2; // Bound to enum value: TYPE_PVE_BATTLE.
  }
  enum Type {
    TYPE_INVALIDE = 0;
    TYPE_PVP_BATTLE = 1 [(tableau.evalue).name = "PVPBattle"];
    TYPE_PVE_BATTLE = 2 [(tableau.evalue).name = "PVEBattle"];
  }

  message PvpBattle {
    int32 battle_id = 1 [(tableau.field) = {name:"BattleId"}];
    uint32 kills = 2 [(tableau.field) = {name:"Kills"}];
    int64 damage = 3 [(tableau.field) = {name:"Damage"}];
  }
  message PveBattle {
    Highlight highlight = 1 [(tableau.field) = {name:"Highlight" span:SPAN_INNER_CELL}];
    message Highlight {
      int32 battle_id = 1 [(tableau.field) = {name:"BattleId"}];
      int32 boss_id = 2 [(tableau.field) = {name:"BossId"}];
      int64 damage = 3 [(tableau.field) = {name:"Damage"}];
    }
    repeated int32 heros_list = 2 [(tableau.field) = {name:"Heros" layout:LAYOUT_INCELL}];
    map<int32, int64> dungeons_map = 3 [(tableau.field) = {name:"Dungeons" layout:LAYOUT_INCELL}];
  }
}

message EnumTypeReuseInBook {
  option (tableau.worksheet) = {name:"EnumTypeReuseInBook" namerow:1 typerow:2 noterow:3 datarow:4};

  map<int32, Item> item_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL}];
  message Item {
    int32 id = 1 [(tableau.field) = {name:"ID"}];
    protoconf.ItemType type = 2 [(tableau.field) = {name:"Type"}];
    string name = 3 [(tableau.field) = {name:"Name"}];
    int32 price = 4 [(tableau.field) = {name:"Price"}];
  }
}
